# portail

./: .containerignore  .gitignore  .gitmodules  Cargo.toml  Containerfile  LICENSE  Makefile  README.md  build.rs  conformance-tests.sh  deploy-conformance.sh
.github/workflows/: bench.yml  ci.yml  conformance.yml  publish.yml
benches/: allocation_bench.rs  end_to_end_bench.rs  parsing_bench.rs  proxy_throughput.rs  routing_bench.rs
conformance/: conformance_test.go  go.mod  go.sum
conformance/manifests/: deployment.yaml  kustomization.yaml  service.yaml
conformance/reports/v1.4.1/epheo-portail/: README.md  experimental-v0.1.0-default-report.yaml
deploy/: conformance.yaml  daemonset.yaml  gatewayclass.yaml  namespace.yaml  rbac.yaml  scc.yaml
dev/bench/: data.js
docs/: architecture-evolution.md  build.sh  configuration.md  deployment.md  index.md  install.md  networking.md
docs/design/: inter-udn-proxy.md
examples/: development.yaml  microservices.yaml  minimal.json  production.json
examples/kubernetes/base/: README.md  kustomization.yaml  namespace.yaml  rbac.yaml  scc.yaml
examples/kubernetes/daemonset/: README.md  daemonset.yaml  gateway.yaml  httproute.yaml  kustomization.yaml  scc.yaml
examples/kubernetes/loadbalancer/: README.md  deployment.yaml  gateway.yaml  kustomization.yaml  metallb-pool.yaml  service.yaml
examples/kubernetes/multi-network/: README.md  deployment.yaml  gateway-backend.yaml  gateway-frontend.yaml  httproute.yaml  kustomization.yaml  tcproute.yaml
examples/kubernetes/multi-network/http-single-namespace/: deployment.yaml  gateway-backend.yaml  gateway-frontend.yaml  httproute.yaml  kustomization.yaml  tcproute.yaml
examples/kubernetes/multi-network/tcp-cross-namespace/: backend.yaml  deployment.yaml  gateway.yaml  kustomization.yaml  namespaces.yaml  networks.yaml  rbac-patch.yaml  referencegrant.yaml  tcproute.yaml
examples/standalone/: README.md  development.yaml  minimal.yaml
hack/: kind-cluster.sh
portail-ebpf/: Cargo.toml
portail-ebpf/.cargo/: config.toml
portail-ebpf/src/: main.rs
scripts/: bench-gate.sh
src/: access_log.rs  admin.rs  backend.rs  backend_pool.rs  chunked.rs  cli.rs  config.rs  config_watcher.rs  control_plane.rs  controller.rs  data_plane.rs  health.rs  http_filters.rs  http_forward.rs  http_parser.rs  lib.rs  logging.rs  main.rs  metrics.rs  network.rs  parser.rs  privileges.rs  readiness.rs  request_processor.rs  routing.rs  runtime_config.rs  tls.rs  udp_worker.rs  uring_data_plane.rs  uring_worker.rs  worker.rs
src/config/: core.rs  examples.rs  mod.rs  parsing.rs  types.rs  validation.rs
src/ebpf/: address_dispatcher.rs  maps.rs  mod.rs  unified_manager.rs
src/kubernetes/: addresses.rs  controller.rs  converters.rs  dns_refresh.rs  features.rs  hostname.rs  mod.rs  parent_ref.rs  reconciler.rs  reference_grants.rs  services.rs  status.rs
src/kubernetes/controller/: mod.rs  reconcile.rs  validate.rs  watch.rs
src/proxy/: backend_pool.rs  chunked.rs  data_plane.rs  h2_bridge.rs  health.rs  http_filters.rs  http_parser.rs  mod.rs  request_processor.rs  tls.rs  udp_worker.rs  worker.rs
src/uring_worker/: io_operations.rs  mod.rs  native_buffer_ring.rs  request_processor.rs  unified_http_parser.rs  user_data.rs
tests/: bench_routing_test.rs  isolated_performance_profiling.rs  test_backend_health.rs  test_buffer_ring_minimal.rs  test_cpu_profiling.rs  test_ebpf_integration.rs  test_http2_integration.rs  test_integration_profiling.rs  test_memory_profiling.rs  test_parser.rs  test_performance.rs  test_proxy_integration.rs  test_routing.rs  test_struct_sizes.rs  test_tls_integration.rs  test_udp_integration.rs  test_worker.rs
tests/helpers/: mod.rs
tests/integration/: README.md  generate_performance_report.sh  run_concurrent_test.sh  start_portail_test_environment.sh  start_uringress_test_environment.sh  test_circuit_breaker.sh  test_performance_realistic.sh
tests/integration/lib/: reporting_functions.sh
tests/integration/profiling/: generate_enhanced_flamegraphs.sh  run_flamegraph_analysis.sh  run_memory_analysis.sh  setup_cpu_profiling.sh
