[package]
name = "uringress"
version = "0.1.0"
edition = "2021"
authors = ["UringRess Contributors"]
description = "Ultra-High-Performance Kubernetes Gateway API Controller built for io_uring"
license = "Apache-2.0"
repository = "https://github.com/your-org/uringress"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time", "signal", "fs"] }
io-uring = "0.7.10"
# io_uring_buf_ring = "0.2.1"
io_uring_buf_ring = { path = "../io_uring_buf_ring" }
# Using kernel-provided buffer ring management for native zero-copy operations
socket2 = { version = "0.6.0", features = ["all"] }
libc = "0.2"
fnv = "1.0"
memchr = "2.6"
bytes = "1.7"
http = "1.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14"
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = "0.1"

# Configuration and CLI dependencies
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio-util = "0.7"

# Kubernetes dependencies
kube = { version = "1.1", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_30"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"] }

# eBPF dependencies - pure Rust eBPF implementation
aya = { path = "../aya/aya" }

[build-dependencies]
anyhow = "1.0"
rustversion = "1.0"
aya-build = { path = "../aya/aya-build" }
aya-ebpf = { path = "../aya/ebpf/aya-ebpf" }
aya-ebpf-macros = { path = "../aya/aya-ebpf-macros" }

[dev-dependencies]
criterion = "0.7"
rand = "0.9"
# Profiling dependencies
flamegraph = "0.6"
dhat = "0.3"

[[bench]]
name = "routing_bench"
harness = false

[[bench]]
name = "parsing_bench"
harness = false

[[bench]]
name = "end_to_end_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Release build optimized for production
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
lto = false  # Disable LTO for better symbol visibility

[profile.bench]
debug = true

# Profiling-optimized release build  
[profile.profiling]
inherits = "release"
debug = 2          # Full debug info
strip = false      # Keep all symbols
lto = false        # Disable link-time optimization for symbol visibility
opt-level = 3      # Keep high optimization
codegen-units = 1  # Single codegen unit for better profiling
overflow-checks = false