[package]
name = "uringress"
version = "0.1.0"
edition = "2021"
authors = ["UringRess Contributors"]
description = "Ultra-High-Performance Kubernetes Gateway API Controller"
license = "Apache-2.0"
repository = "https://github.com/your-org/uringress"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "time", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
socket2 = { version = "0.6.0", features = ["all"] }
libc = "0.2"
fnv = "1.0"
arc-swap = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration and CLI dependencies
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TLS dependencies
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
pin-project-lite = "0.2"

# eBPF dependencies - pure Rust eBPF implementation
aya = { path = "../aya/aya" }

[build-dependencies]
anyhow = "1.0"
rustversion = "1.0"
aya-build = { path = "../aya/aya-build" }
aya-ebpf = { path = "../aya/ebpf/aya-ebpf" }
aya-ebpf-macros = { path = "../aya/aya-ebpf-macros" }

[dev-dependencies]
criterion = "0.7"
tempfile = "3"

[[bench]]
name = "routing_bench"
harness = false

[[bench]]
name = "parsing_bench"
harness = false

[[bench]]
name = "end_to_end_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Release build optimized for production
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
lto = false  # Disable LTO for better symbol visibility

[profile.bench]
debug = true

# Profiling-optimized release build
[profile.profiling]
inherits = "release"
debug = 2          # Full debug info
strip = false      # Keep all symbols
lto = false        # Disable link-time optimization for symbol visibility
opt-level = 3      # Keep high optimization
codegen-units = 1  # Single codegen unit for better profiling
overflow-checks = false
